src/main/cshadow.rs

                ::std::ptr::addr_of!((*ptr).autotuneSendBuf) as usize - ptr as usize
            },
            136usize,
            concat!(
                "Offset of field: ",
                stringify!(_HostParameters),
                "::",
                stringify!(autotuneSendBuf)
            )
        );
    }
    test_field_autotuneSendBuf();
    fn test_field_interfaceBufSize() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_HostParameters>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).interfaceBufSize) as usize - ptr as usize
            },
            144usize,
            concat!(
                "Offset of field: ",
                stringify!(_HostParameters),
                "::",
                stringify!(interfaceBufSize)
            )
        );
    }
    test_field_interfaceBufSize();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _NetworkInterface {
    _unused: [u8; 0],
}
pub type NetworkInterface = _NetworkInterface;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Router {
    _unused: [u8; 0],
}
pub type Router = _Router;
extern "C" {
    pub fn host_new(params: *const HostParameters) -> *mut Host;
}
extern "C" {
    pub fn host_ref(host: *mut Host);
}
extern "C" {
    pub fn host_unref(host: *mut Host);
}
extern "C" {
    pub fn host_pushLocalEvent(host: *mut Host, event: *mut Event) -> bool;
}
extern "C" {
    pub fn host_execute(host: *mut Host, until: CEmulatedTime);
}
extern "C" {
    pub fn host_nextEventTime(host: *mut Host) -> CEmulatedTime;
}
extern "C" {
    pub fn host_getOwnedEventQueue(host: *mut Host) -> *const ThreadSafeEventQueue;
}
extern "C" {
    pub fn host_continueExecutionTimer(host: *mut Host);
}
extern "C" {
    pub fn host_stopExecutionTimer(host: *mut Host);
}
extern "C" {
    pub fn host_setup(
        host: *mut Host,
        dns: *mut DNS,
        rawCPUFreq: gulong,
        hostRootPath: *const gchar,
    );
}
extern "C" {
    pub fn host_boot(host: *mut Host);
}
extern "C" {
    pub fn host_shutdown(host: *mut Host);
}
extern "C" {
    pub fn host_getNewProcessID(host: *mut Host) -> guint;
}
extern "C" {
    pub fn host_getNewEventID(host: *mut Host) -> guint64;
}
extern "C" {
    pub fn host_getNewPacketID(host: *mut Host) -> guint64;
}
extern "C" {
    pub fn host_addApplication(
        host: *mut Host,
        startTime: CSimulationTime,
        stopTime: CSimulationTime,
        pluginName: *const gchar,
        pluginPath: *const gchar,
        envv: *const *const gchar,
        argv: *const *const gchar,
        pause_for_debugging: bool,
    );
}
extern "C" {
    pub fn host_freeAllApplications(host: *mut Host);
}
extern "C" {
    pub fn host_getID(host: *mut Host) -> HostId;
}
extern "C" {
    pub fn host_getCPU(host: *mut Host) -> *mut CPU;
}
extern "C" {
    pub fn host_getTsc(host: *mut Host) -> *mut Tsc;
}
extern "C" {
    pub fn host_getName(host: *mut Host) -> *const gchar;
}
extern "C" {
    pub fn host_getDefaultAddress(host: *mut Host) -> *mut Address;
}
extern "C" {
    pub fn host_getDefaultIP(host: *mut Host) -> in_addr_t;
}
extern "C" {
    pub fn host_getRandom(host: *mut Host) -> *mut Random;
}
extern "C" {
    pub fn host_getNextPacketPriority(host: *mut Host) -> gdouble;
}
extern "C" {
    pub fn host_autotuneReceiveBuffer(host: *mut Host) -> gboolean;
}
extern "C" {
    pub fn host_autotuneSendBuffer(host: *mut Host) -> gboolean;
}
extern "C" {
    pub fn host_getConfiguredRecvBufSize(host: *mut Host) -> guint64;
}
extern "C" {
    pub fn host_getConfiguredSendBufSize(host: *mut Host) -> guint64;
}
extern "C" {
    pub fn host_getUpstreamRouter(host: *mut Host, handle: in_addr_t) -> *mut Router;
}
extern "C" {
    pub fn host_get_bw_down_kiBps(host: *mut Host) -> u64;
}
extern "C" {
    pub fn host_get_bw_up_kiBps(host: *mut Host) -> u64;
}
extern "C" {
    pub fn host_returnHandleHack(handle: gint);
}
extern "C" {
    pub fn host_getTracker(host: *mut Host) -> *mut Tracker;
}
extern "C" {
    pub fn host_getLogLevel(host: *mut Host) -> LogLevel;
}
extern "C" {
    pub fn host_getDataPath(host: *mut Host) -> *const gchar;
}
extern "C" {
    pub fn host_doesInterfaceExist(host: *mut Host, interfaceIP: in_addr_t) -> gboolean;
}
extern "C" {
    pub fn host_isInterfaceAvailable(
        host: *mut Host,
        type_: ProtocolType,
        interfaceIP: in_addr_t,
        port: in_port_t,
        peerIP: in_addr_t,
        peerPort: in_port_t,
    ) -> gboolean;
}
extern "C" {
    pub fn host_getRandomFreePort(
        host: *mut Host,
        type_: ProtocolType,
        interfaceIP: in_addr_t,
        peerIP: in_addr_t,
        peerPort: in_port_t,
    ) -> in_port_t;
}
extern "C" {
    pub fn host_getAbstractUnixNamespace(
        host: *mut Host,
    ) -> *mut Arc_AtomicRefCell_AbstractUnixNamespace;
}
extern "C" {
    pub fn host_getFutexTable(host: *mut Host) -> *mut FutexTable;
}
extern "C" {
    pub fn host_getNativeTID(host: *mut Host, virtualPID: pid_t, virtualTID: pid_t) -> pid_t;
}
extern "C" {
    pub fn host_getProcess(host: *mut Host, virtualPID: pid_t) -> *mut Process;
}
extern "C" {
    pub fn host_getThread(host: *mut Host, virtualTID: pid_t) -> *mut Thread;
}
extern "C" {
    pub fn host_getSharedMem(host: *mut Host) -> *mut ShimShmemHost;
}
extern "C" {
    pub fn host_getShimShmemLock(host: *mut Host) -> *mut ShimShmemHostLock;
}
extern "C" {
    pub fn host_lockShimShmemLock(host: *mut Host);
}
extern "C" {
    pub fn host_unlockShimShmemLock(host: *mut Host);
}
extern "C" {
    pub fn host_getNextDeterministicSequenceValue(host: *mut Host) -> guint64;
}
extern "C" {
    pub fn host_scheduleTaskAtEmulatedTime(
        host: *mut Host,
        task: *mut TaskRef,
        time: CEmulatedTime,
    ) -> gboolean;
}
extern "C" {
    pub fn host_scheduleTaskWithDelay(
        host: *mut Host,
        task: *mut TaskRef,
        nanoDelay: CSimulationTime,
    ) -> gboolean;
}
extern "C" {
    pub fn worker_maxEventRunaheadTime(host: *mut Host) -> CEmulatedTime;
}
extern "C" {
    pub fn worker_sendPacket(src: *mut Host, packet: *mut Packet);
}
extern "C" {
    pub fn affinity_getGoodWorkerAffinity() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn affinity_initPlatformInfo() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn affinity_setProcessAffinity(
        pid: pid_t,
        new_cpu_num: ::std::os::raw::c_int,
        old_cpu_num: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Epoll {
    _unused: [u8; 0],
}
pub type Epoll = _Epoll;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _SysCallHandler {
    pub host: *mut Host,
    pub process: *mut Process,
    pub thread: *mut Thread,
    pub syscall_handler_rs: *mut SyscallHandler,
    pub epoll: *mut Epoll,
    pub blockedSyscallNR: ::std::os::raw::c_long,
    pub perfTimer: *mut GTimer,
    pub perfSecondsCurrent: gdouble,
    pub perfSecondsTotal: gdouble,
    pub numSyscalls: ::std::os::raw::c_long,
    pub syscall_counter: *mut Counter,
    pub havePendingResult: bool,
    pub pendingResult: SysCallReturn,
    pub referenceCount: ::std::os::raw::c_int,
    pub magic: guint,
}
